# shanmiao-rule-lab

./: .gitignore  API_SPEC.md  README.md  dev_server.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  exceptions.py  kernel.py
app/engine/: academic_extractor.py  academic_layering.py  adversarial.py  ast_checker.py  auto_clusterer.py  auto_validator.py  belief_propagation.py  book.py  bootstrapper.py  candidate_pipeline.py  candidate_store.py  classifier.py  clause_classifier.py  clause_splitter.py  conjecture.py  core.py  differentiable.py  domain_builder.py  domain_classifier.py  domain_pipeline.py  domain_prototype.py  dynamic_classifier.py  engine.py  extractor.py  extractor_interface.py  feature_extractor.py  ingest_contract.py  knowledge_layers.py  lexical_prototype.py  llm_rule_extractor.py  logic_correction.py  model_inference.py  mus.py  neuro_symbolic.py  online_learner.py  ontology.py  ontology_expander.py  pdf_extractor.py  pipeline.py  query_engine.py  (+9 more)
app/kernel/: ingest_v28.py
docs/: T5_TECH_NOTE.md
docs/tasks/: T5.1-FIX-RULE-DISTRIBUTION.md  T5.2-LLM-EXTRACTION-COMPARISON.md  (+4 more)
domains/: README.md  global_ontology.json
tests/: conftest.py  road2_compare.py  road2_compare_report.json  road2_eval.py  road2_gold_samples.json  road2_known_limits.md  road2_llm_extractor.py  road2_numeric_rules.json  rule_card_validator.py  test_adversarial.py  test_ast_check.py  test_belief_propagation.py  test_clause_classifier.py  test_differentiable.py  test_end_to_end.py  test_mus.py  test_rule_extractor.py  test_rule_graph.py  test_triager.py
(+42 files in other folders)
