[project]
name = "shanmiao-rule-lab"
version = "0.1.0"
description = "Small deterministic domain-rule validation research sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Shanmiao Rule Lab Contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "aiohttp>=3.11.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/xingw888-maker/shanmiao-rule-lab"
Repository = "https://github.com/xingw888-maker/shanmiao-rule-lab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
